--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -26,3 +26,14 @@ body {
   font-size: 20px;
   }
 }
+
+.testimonial{
+  background: white;
+  margin: 40px;
+  text-align: center;
+  box-shadow: 1px 1px 3px rgb(216, 212, 212);
+  img{
+  width: 40%;
+  margin: 20px;
+  }
+}
