--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,7 +17,7 @@ title: Le Wagon Middleman boilerplate
       </div>
     </div>
   </div>
-  <div class="blue-bg padded">
+  <div class="bg-blue padded">
     <div class="container text-center" id="features">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-3">
@@ -58,6 +58,22 @@ title: Le Wagon Middleman boilerplate
       <input type="email" placeholder="bob@gmail.com" class="form-control">
       <input type="submit" value="Subscribe" class="btn btn-primary">
     </form>
+  </div>
+
+  <div id="testimonials">
+    <div class="container">
+      <div class="row">
+        <% data.testimonials.each do |testimonial| %>
+            <div class="col-xs-12 col-sm-6">
+              <div class="testimonial padded">
+                <%= image_tag testimonial.image_file, class: "img-circle" %>
+                <h3><%= testimonial.name %></h3>
+                <p><%= testimonial.content %></p>
+              </div>
+            </div>
+              <% end %>
+      </div>
+    </div>
   </div>
 
   <div id="map" style="width: 100%; height: 400px;"></div>
