--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,44 +5,50 @@ title: Le Wagon Middleman boilerplate
   <div id="banner">
     <div class="container">
       <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-6 appearIn">
           <h1>Styl.us</h1>
           <br>
           <p>Turn your pen into you best friend</p>
           <p>Make every line you write count..</p>
           <br>
-          <a href="" class="btn btn-primary btn-lg btn-rounded">GET YOUR STYLUS</a>
+          <a href="" class="btn btn-primary btn-lg btn-rounded" data-toggle="modal" data-target="#orderForm">GET YOUR STYLUS</a>
         </div>
         <div class="col-xs-6"></div>
       </div>
+      <div class="scroll pulse" style="margin: 150px">
+        <a href="#features">
+          <i class="fa fa-angle-down" style="color: white"></i>
+        </a>
+      </div>
+
     </div>
   </div>
-  <div class="bg-blue padded">
-    <div class="container text-center" id="features">
+  <div class="bg-blue" style="padding-top: 4em" id="features">
+    <div class="container text-center">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="card">
+          <div class="card" data-sr>
             <%= image_tag "paper.svg" %>
             <h2>Natural writing</h2>
             <p>Don't change your habits, write with a pen <strong>on paper notebooks</strong></p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="card">
+          <div class="card" data-sr>
             <%= image_tag "computer.svg" %>
             <h2>Sync. copy</h2>
             <p>Stylus instantaneously copy your text on your computer, <strong>in real-time</strong></p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="card">
+          <div class="card" data-sr>
             <%= image_tag "analytics.svg" %>
             <h2>Analytics</h2>
             <p>Get feedbacks on the way you write, <strong>your favorite words, your frequent mistakes</strong></p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="card">
+          <div class="card" data-sr>
             <%= image_tag "data.svg" %>
             <h2>Storing your texts</h2>
             <p>Everything line writen with your stylus is stored in the cloud, so that <strong>it's never lost</strong></p>
@@ -50,8 +56,15 @@ title: Le Wagon Middleman boilerplate
         </div>
       </div>
     </div>
+        <div class="scroll pulse" style="margin-top: 50px">
+        <a href="#features2">
+        <i class="fa fa-angle-down" style="color: white"></i>
+        </a>
+        </div>
+
   </div>
-  <div class="text-center padded">
+
+  <div class="text-center padded" id="features2">
     <h2>Get news from stylus</h2>
     <p>Leave us your mail and get stylus news</p>
     <form class="form-inline">
@@ -60,8 +73,14 @@ title: Le Wagon Middleman boilerplate
     </form>
   </div>
 
-  <div id="testimonials">
-    <div class="container">
+  <div class="scroll pulse" style="position: relative; width: 150px; margin: 0 auto">
+        <a href="#features3">
+          <i class="fa fa-angle-down" style="color: black"></i>
+        </a>
+      </div>
+
+  <div id="testimonials slideExpandUp">
+    <div class="container" id="features3">
       <div class="row">
         <% data.testimonials.each do |testimonial| %>
             <div class="col-xs-12 col-sm-6">
@@ -76,7 +95,15 @@ title: Le Wagon Middleman boilerplate
     </div>
   </div>
 
-  <div id="map" style="width: 100%; height: 400px;"></div>
+  <div class="scroll pulse" style="position: relative; width: 150px; margin: 0 auto">
+        <a href="#features4">
+          <i class="fa fa-angle-down" style="color: black"></i>
+        </a>
+      </div>
+
+  <div id="map" style="width: 100%; height: 400px; margin: 40px"></div>
+
+    <div id="features4"></div>
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 
@@ -98,3 +125,43 @@ title: Le Wagon Middleman boilerplate
     title:"You are here!"
   });
   </script>
+
+
+  <!-- Modal -->
+<div class="modal fade" id="orderForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Order your stylus</h4>
+      </div>
+      <div class="modal-body">
+        <form action="">
+          <div class="row">
+            <div class="col-xs-6">
+                <div class="form-group">
+                <label for="firstname">Prénom</label>
+                <input type="text" class="form-control" placeholder="Bob" id="firstname">
+                </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="form-group">
+              <label for="lastname">Nom</label>
+              <input type="text" class="form-control" placeholder="Lebricoleur" id="lastname">
+              </div>
+            </div>
+          </div>
+            <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" placeholder="bob@gmail.com" id="email">
+            </div>
+            <input type="submit" value="Order" class= "btn btn-primary">
+            </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  window.sr = new scrollReveal();
+</script>
