--- a/source/stylesheets/layout/_navbar.css.scss
+++ b/source/stylesheets/layout/_navbar.css.scss
@@ -4,7 +4,7 @@
 $navbar-color: white;
 $navbar-hover-color: $red;
 $navbar-font-family: $header-font;
-$navbar-bg: black;
+$navbar-bg: transparent;
 
 /* -------------------------------------
  * Box model
