--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -19,6 +19,12 @@ body {
   }
 }
 
+.scroll{
+  text-align: center;
+  font-size: 50px;
+  color: white;
+}
+
 .card {
   padding: 10px;
   font-weight: 300;
@@ -29,12 +35,12 @@ body {
 
 .testimonial{
   background: white;
-  margin: 40px;
+  margin: 10px;
   text-align: center;
   box-shadow: 1px 1px 3px rgb(216, 212, 212);
   img{
   width: 40%;
-  margin: 20px;
+  margin: 10px;
   }
 }
 
